// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should re-render when size changed 1`] = `
<div>
  <span
    class="jsx-2259675582  "
  >
    size
  </span>
</div>
`;

exports[`Badge should render different sizes 1`] = `
<div>
  <span
    class="jsx-2259675582  "
  >
    mini
  </span>
  <span
    class="jsx-2649261771  "
  >
    small
  </span>
  <span
    class="jsx-2222040147  "
  >
    medium
  </span>
  <span
    class="jsx-7157526  "
  >
    large
  </span>
</div>
`;

exports[`Badge should render different types 1`] = `
<div>
  <span
    class="jsx-1462554259  "
  >
    badge
  </span>
  <span
    class="jsx-3890763607  "
  >
    badge
  </span>
  <span
    class="jsx-1157746020  "
  >
    badge
  </span>
  <span
    class="jsx-1975066081  "
  >
    badge
  </span>
</div>
`;
